# gpui-ghostty

./: .gitignore  AGENTS.md  README.md  ROADMAP.md
.cursor/rules/: language.mdc
crates/ghostty_vt/examples/: perf_style_dump.rs
crates/ghostty_vt/src/: lib.rs
crates/ghostty_vt/tests/: charset_dec_special.rs  dirty_rows.rs  hyperlink.rs  key_encoder.rs  osc_palette.rs  scroll_and_resize.rs  smoke.rs  style_dump.rs  viewport_scroll_delta.rs
crates/ghostty_vt_sys/: build.rs
crates/ghostty_vt_sys/include/: ghostty_vt.h
crates/ghostty_vt_sys/src/: lib.rs
crates/ghostty_vt_sys/zig/: lib.zig
crates/gpui_ghostty_terminal/: Cargo.toml
crates/gpui_ghostty_terminal/src/: config.rs  config_file.rs  font.rs  lib.rs  session.rs  tests.rs  themes.rs
crates/gpui_ghostty_terminal/src/view/: mod.rs
examples/basic_terminal/src/: main.rs
examples/pty_terminal/: Cargo.toml
examples/pty_terminal/src/: main.rs
examples/split_pty_terminal/: Cargo.toml
examples/split_pty_terminal/src/: main.rs
