[package]
name = "gpui_ghostty_terminal"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
base64 = "0.22"
ghostty_vt = { path = "../ghostty_vt" }
gpui = { git = "https://github.com/zed-industries/zed", rev = "6016d0b8c6a22e586158d3b6f810b3cebb136118", package = "gpui" }
unicode-width = "0.2"
